<resources>
    <string name="app_name">Course Application</string>

    <!-- Strings related to login -->
    <string name="prompt_email">学/工号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">输入的学号或工号无效</string>
    <string name="error_invalid_password">输入的密码无效</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此处必须填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 个人信息界面相关 -->
    <string name="sid">学号</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="department">系名</string>
    <string name="dep_id">系号</string>
    <string name="academy">学院</string>
    <string name="specialty">专业</string>
    <string name="birth">出生日期(1900–01-01)</string>
    <string name="address">籍贯</string>
    <string name="classes">行政班</string>
    <string name="grade">所在年级</string>
    <string name="tid">工号</string>
    <string name="power">权限:</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="password">默认密码</string>
    <string name="spe_id">专业号</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_manager">ManagerActivity</string>

    <string name="bottom_nav_info">信息查询</string>
    <string name="bottom_nav_tea">录入成绩</string>
    <string name="bottom_nav_stu">选课管理</string>
    <string name="bottom_nav_man">信息管理</string>
    <string name="bottom_nav_setting">设置</string>

    <string name="course_id">课程编号</string>
    <string name="course_name">名称</string>
    <string name="course_period">学时</string>
    <string name="course_credit">学分</string>
    <string name="course_number">容量</string>
    <string name="course_begin_end">起止时间(1-16周)</string>
    <string name="course_time">上课时间</string>
    <string name="course_teacher">授课教师(工号)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
