<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ManAddCouActivity"
android:orientation="vertical"
android:padding="16dp">

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_id"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_period"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_credit"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_number"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_be"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_begin_end"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/man_edit_cou_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_time"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    >

    <EditText
        android:id="@+id/man_edit_cou_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_teacher"
        android:maxLines="1"
        android:singleLine="true" />
</android.support.design.widget.TextInputLayout>

<Button
    android:id="@+id/man_edit_cou_submit_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="提交"
    android:textColor="@color/colorWhite"
    android:background="@color/colorBtnBlue"/>

</LinearLayout>